# vrmlx

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  _clang-format  testConfig.linux.json  testConfig.windows.json  vrmlprocSynonyms.json  vrmlxConfig.json  vrmlxConfig.linux.json  vrmlxConfig.windows.json  vrmlxpyConfig.json  vrmlxpyConfig.json.example
data/expected_data/: AlphaShapeCalculator_-_valid_I..stl  BoxCalculator_-_Transform_tests_-_multipleScale.stl  BoxCalculator_-_Transform_tests_-_noTransform.stl  BoxCalculator_-_Transform_tests_-_translationAndXAxisRotation.stl  BoxCalculator_-_Transform_tests_-_yAsixRotation.stl  BoxCalculator_-_Transform_tests_-_yAsixRotationWithCenter.stl  BoxCalculator_-_Transform_tests_-_zAsixRotationWithTranslation.stl  BoxCalculator_-_Transform_tests_-_zAsixRotationWithTranslationAndScale.stl  BoxCalculator_-_Transform_tests_-_zAsixRotationWithTranslationAndScaleInWorldCoords.stl  BoxCalculator_-_Transform_tests_-_zAxisRotation.stl  BoxCalculator_-_Transform_tests_-_zAxisRotationWithCenter.stl  IndexedFaceSetCalculator_(only_triangular_faces_without_their_range_check)_-_valid_II..stl  IndexedFaceSetCalculator_-_valid_III..stl
doc/: cgal_installation.md  docker_steps.md  manual.md
docs/: boost_installation.md  cgal_installation.md  docker_steps.md  manual.md
docs/gh-pages/doxygen/: _config_8hpp_source.html  _error_8hpp_source.html  _file_reader_8hpp_source.html  _handler_parameters_8hpp_source.html  _identifier_grammar_8hpp_source.html  _indexed_face_set_handler_8hpp_source.html  _int32_array_grammar_8hpp_source.html  _mesh_task_conversion_context_8hpp_source.html  _obj_file_writer_8hpp_source.html  _quoted_string_grammar_8hpp_source.html  _range_8hpp_source.html  _switch_handler_8hpp_source.html  _text_handler_8hpp_source.html  _vec3f_array_grammar_8hpp_source.html  _vrml_field_8hpp_source.html  _vrml_node_8hpp_source.html  classes.html  classto__geom_1_1action_1_1_box_action.js  classto__geom_1_1action_1_1_group_action-members.html  classto__geom_1_1action_1_1_group_action.js  classto__geom_1_1action_1_1_helper_coordinate_action.html  classto__geom_1_1action_1_1_indexed_line_set_action.html  classto__geom_1_1action_1_1_indexed_line_set_action.js  classto__geom_1_1action_1_1_transform_action.js  classto__geom_1_1calculator_1_1_box_calculator-members.html  classto__geom_1_1calculator_1_1error_1_1_indexed_face_set_calculator_error.html  classto__geom_1_1calculator_1_1error_1_1_indexed_line_set_calculator_error-members.html  classto__geom_1_1calculator_1_1error_1_1_indexed_triangular_face_set_calculator_error.html  classto__geom_1_1calculator_1_1error_1_1_properties_error.js  classto__geom_1_1calculator_1_1error_1_1_vertex_index_out_of_range_error-members.html  classto__geom_1_1core_1_1io_1_1_obj_file_writer.html  classto__geom_1_1core_1_1io_1_1_obj_file_writer.js  classvrml__proc_1_1conversion__context_1_1_vector_conversion_context.js  classvrml__proc_1_1core_1_1error_1_1_error.js  classvrml__proc_1_1core_1_1io_1_1_file_reader.js  classvrml__proc_1_1core_1_1io_1_1_json_file_reader.html  classvrml__proc_1_1core_1_1io_1_1_memory_mapped_file_reader.js  classvrml__proc_1_1core_1_1io_1_1error_1_1_file_not_found_error-members.html  classvrml__proc_1_1core_1_1utils_1_1_manual_timer.html  classvrml__proc_1_1parser_1_1_parser.html  (+47 more)
docs/gh_pages/doxygen/: _alpha_shape_calculator_8hpp_source.html  _angle_8hpp_source.html  _appearance_handler_8hpp_source.html  _base_conversion_context_8hpp_source.html  _base_grammar_8hpp_source.html  _basic_handler_8hpp_source.html  _boolean_grammar_8hpp_source.html  _box_action_8hpp_source.html  _box_calculator_8hpp_source.html  _buffer_view_8hpp_source.html  _c_g_a_l_base_types_for_vrml_8hpp_source.html  _calculator_error_8hpp_source.html  _calculator_result_8hpp_source.html  _calculator_utils_8hpp_source.html  _collision_handler_8hpp_source.html  _comment_skipper_8hpp_source.html  _comparable_8hpp_source.html  _conversion_context_action_8hpp_source.html  _conversion_context_action_executor_8hpp_source.html  _conversion_context_action_map_8hpp_source.html  _conversion_contextable_8hpp_source.html  _elevation_grid_handler_8hpp_source.html  _export_formats_8hpp_source.html  _extractor_cache_8hpp_source.html  _file_traversor_error_8hpp_source.html  _file_writer_8hpp_source.html  _format_string_8hpp_source.html  _geometry_action_8hpp_source.html  _grammar_error_8hpp_source.html  _group_action_8hpp_source.html  _grouping_handler_8hpp_source.html  _handler_to_action_bundle_8hpp_source.html  _handler_utils_8hpp_source.html  _hash_8hpp_source.html  _helper_coordinate_action_8hpp_source.html  _indexed_face_set_action_8hpp_source.html  _indexed_face_set_calculator_8hpp_source.html  _indexed_line_set_action_8hpp_source.html  _indexed_line_set_calculator_8hpp_source.html  _indexed_line_set_handler_8hpp_source.html  (+494 more)
pypi/: MANIFEST.in  README.md  pyproject.toml  setup.py
src/: ConvertVrmlToGeom.cpp  ConvertVrmlToGeomBulk.cpp  bindings.cpp  vrmlx.cpp  vrmlx.hpp  vrmlxConversionApp.cpp  vrmlx_logo.hpp  vrmlxpy.cpp  vrmlxpy.hpp  vrmlxpy_logo.hpp
test_utils/: TestCommon.hpp  TestTraversor.hpp
to_geom/: CMakeLists.txt
to_geom/src/: ToGeomExport.hpp
to_geom/src/actions/: BoxAction.cpp  BoxAction.hpp  GeometryAction.hpp  GroupAction.cpp  GroupAction.hpp  HelperCoordinateAction.hpp  IndexedFaceSetAction.cpp  IndexedFaceSetAction.hpp  IndexedLineSetAction.cpp  IndexedLineSetAction.hpp  ShapeAction.cpp  ShapeAction.hpp  SwitchAction.cpp  SwitchAction.hpp  ToGeomActionMap.hpp  TransformAction.cpp  TransformAction.hpp
to_geom/src/calculators/: AlphaShapeCalculator.hpp  BoxCalculator.cpp  BoxCalculator.hpp  (+9 more)
to_geom/tests/: CalculatorsTest.cpp  VrmlFileTraversorTest.cpp
vrml_proc/: CMakeLists.txt
vrml_proc/src/: VrmlProcExport.hpp
vrml_proc/tests/: Int32ArrayGrammarTest.cpp  OtherVrmlProcComponentsTest.cpp  Vec3fArrayGrammarTest.cpp  Vec3fGrammarTest.cpp  Vec4fGrammarTest.cpp  VrmlFieldExtractorTest.cpp  VrmlFileGrammarTest.cpp
(+220 files in other folders)
